tests/macros/select/validate.stderr
error: option `validate` does not exist for kind `select`
 --> $DIR/validate.rs:2:44
  |
2 |     let q = requestty::questions![Select { validate: todo!() }];
  |                                            ^^^^^^^^
