tests/macros/select/validate.rs
fn main() {
    let q = requestty::questions![Select { validate: todo!() }];
}
